--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ regex-automata = { version = "0.1.10", features = ["transducer"] }
 sorted-vec = "0.8.3"
 tree-sitter = "0.22"
 tree-sitter-cpp = "0.22"
-#tree-sitter-c-sharp = "0.20"
+tree-sitter-c-sharp = "0.21"
 tree-sitter-java = "0.21"
 tree-sitter-javascript = "0.21"
 #tree-sitter-kotlin = "0.3.1"
